<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/item_background">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/note_title"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/note_description"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:maxLines="1"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/currentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/note_current_date"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:padding="10dp"
            android:maxLines="1"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>