<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.profileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/item_background" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfile"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/lato_bold"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:textColor="@color/mainFontColor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewName"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/lato_bold"
        android:text="@string/email"
        android:layout_marginTop="5dp"
        android:textColor="@color/mainFontColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/singOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/singout_button"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp" />
</RelativeLayout>